# Singularity-Rust

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md
.cargo/: config.toml
assets/models/: shiba.glb
src/: assets.rs  bundles.rs  camera.rs  constants.rs  main.rs  player.rs  resources.rs  ui.rs  world.rs
src/app_state/: game.rs  in_game.rs  initialization.rs  loading.rs  main_menu.rs  menu.rs  mod.rs  splash.rs
src/lib/: animation.rs  color.rs  controller.rs  diagnostics.rs  easing.rs  events.rs  font.rs  inputs.rs  look.rs  mod.rs  rapier.rs
src/state/: in_game.rs  loading.rs  menu.rs  mod.rs  splash.rs
src/utils/: diagnostics.rs
