[package]
name = "singularity"
version = "0.1.0"
authors = ["miZyind <mizyind@gmail.com>"]
edition = "2021"
homepage = "https://mizyind.dev/singularity"
repository = "https://github.com/miZyind/singularity"
license = "MIT"
keywords = ["game", "bevy"]

[dependencies]
bevy = { version = "0.6.1", default-features = false, features = [
    "bevy_winit",
    "png",
] }
bevy_rapier3d = "0.12.1"
bevy-inspector-egui = { version = "0.9", optional = true }
bevy_ui_animation = { git = "https://github.com/mizyind/bevy_ui_animation" }

[profile.release]
opt-level = "z"
lto = true
