[package]
name = "singularity"
version = "0.1.0"
authors = ["miZyind <mizyind@gmail.com>"]
edition = "2021"
homepage = "https://mizyind.dev/singularity"
repository = "https://github.com/miZyind/singularity"
license = "MIT"
keywords = ["game", "bevy"]

[dependencies]
bevy = "0.8.1"
bevy_asset_loader = { version = "0.12", features = ["progress_tracking"] }
bevy-inspector-egui = { version = "0.13", optional = true }
iyes_progress = "0.5.0"

[profile.release]
opt-level = "s"
lto = true
